[TASK/FEATURE] shows list of artists on event page, added spotify api

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>React Flux App</title>
+        <link rel="stylesheet" type="text/css" href="/public/style.css" />
     </head>
     <body>
         <div id="main" class="container"></div>
