--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>React Flux App</title>
         <link rel="stylesheet" type="text/css" href="/public/style.css" />
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div id="main" class="container"></div>
